# ecom-datalake-exten

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  scratchpad.md
.backup_smoke_test_20260110_035720/: .id_state.json  backlog_bear.sh
.backup_smoke_test_20260110_041517/: .id_state.json
.github/workflows/: ci.yml  release.yml
docs/resource_hub/: CONFIG_GUIDE_generator.md  README_generator.md  database_schema_reference.md
docs/resource_hub/datalakes_extention/: CLI_REFERENCE.md  CONFIG_GUIDE.md  TESTING_GUIDE.md
docs/resource_hub/datalakes_extention/workflows/: BACKLOG_BEAR.md
docs/resource_hub/ecom_generator/: CONFIG_GUIDE.md  README.md  database_schema_reference.md
gen_config/: ecom_sales_gen_quick.yaml
scripts/: backlog_bear.sh  backlog_bear_test.sh  check_duplicates.py  generate_static_lookups.sh  smoke_test.sh  smoke_test_phase4_only.sh  upload_dimension_tables.sh
src/ecom_datalake_extension/: __init__.py  cli.py  config.py  gcs_uploader.py  generator_runner.py  hooks.py  lineage.py  manifest.py  parquet_writer.py  utils.py
tests/: test_cli_export.py  test_gcs_upload.py  test_parquet_writer.py
